# geographic_or_ds_playground

./: .gitignore  LICENCE.md  jottings.md  pyproject.toml  streamlit_app.py
.streamlit/: config.toml
app/: Catchment.py  Catchment_2sfca.py  Catchment_2sfca_car.py  Catchment_2sfca_pt.py  Catchment_Isochrones.py  Catchment_Isochrones_car.py  Catchment_Isochrones_pt.py  Compare.py  Decide.py  Demand.py  Demand_Deprivation_Hotspots.py  Demand_Hotspots.py  Demand_Travel_Hotspots.py  Deprivation.py  Deprivation_Hotspots.py  Deprivation_Travel_Hotspots.py  Homepage.py  Optimise_5_Sites.py  Optimise_6_Sites.py  Optimize.py  Projected_Demand.py  Running_Evidence_Summary.py  Travel.py  Travel_Both_Advanced.py  Travel_Car.py  Travel_Public_Transport.py  Travel_Public_Transport_Advanced.py  Utilisation.py  maps.py  style.css  utils.py  utils_investigations.py
app/assets/: CRTFilter.js  terminal.css  terminal.js
data/: LICENCE.md  LSOA_Devon_2021_EW_BSC_V4.gpkg  comparison_num_sites.pkl  demand_MF_50_84.csv  devon_cdcs.csv  devon_imd_2025_2021_LSOAs.csv  devon_mius.geojson  devon_sites.csv  existing_devon_cdcs.csv  filter_and_generate_data.ipynb  nearby_devon_cdcs.csv  solution_car_5.pkl  solution_car_5_solution_df.pkl  solution_car_6_best.pkl  solution_car_6_worst.pkl  solution_car_7_best.pkl  solution_car_7_worst.pkl  solution_car_8_best.pkl  solution_car_8_worst.pkl  solve_and_generate_animations.ipynb  travel_matrix_car.csv  travel_matrix_public_transport.csv
data/travel_matrix_generation/: LSOA_PopCentroids_EW_2021_V4_-4541397882496207062.gpkg  get_travel_matrix.ipynb  (+1 more)
(+1 files in other folders)
