[project]
name = "geographic-or-ds-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "lokigi>=0.1.0",
    "num2words>=0.5.14",
    "streamlit>=1.58.0",
    "streamlit-folium>=0.27.2",
]

[dependency-groups]
dev = [
    "deepnote-toolkit[server]>=2.3.1",
    "openpyxl>=3.1.5",
]
