[project]
name = "geographic-or-ds-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "contextily>=1.7.0",
    "geopandas>=1.1.3",
    "lokigi[routing]==0.2.0",
    "num2words>=0.5.14",
    "osmium>=4.3.1",
    "pyproj>=3.7.2",
    "pyrosm>=0.8.0",
    "pyvalhalla>=3.7.0",
    "streamlit>=1.58.0",
    "streamlit-folium>=0.27.2",
]

[dependency-groups]
dev = [
    "openpyxl>=3.1.5",
]
